fix overflow scroll

--- a/src/packages/admin-ui-components/src/layouts/default/styles.module.css
+++ b/src/packages/admin-ui-components/src/layouts/default/styles.module.css
@@ -34,4 +34,5 @@
 	min-width: 0;
 	display: flex;
 	flex-direction: column;
+	overflow-y: scroll;
 }
